<resources>
    <string name="app_name">FairSplit</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_logistic">New To Logistic?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>