<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_welcome"
        />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textFontWeight="800"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/tv_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email_id"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/icon_email"
        android:background="@drawable/bg_rounded_rect"
        android:backgroundTint="#F7F8F8"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:id="@+id/relative_for_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_id"
        android:background="@drawable/bg_rounded_rect"
        android:backgroundTint="#F7F8F8"
        android:padding="8dp"
        android:layout_margin="8dp"
        >

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_lock"
            android:background="@drawable/bg_rounded_rect"
            android:backgroundTint="#F7F8F8"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:layout_toStartOf="@id/btn_hide_pass"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            />

        <ImageView
            android:id="@+id/btn_hide_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_hide_pass" />


    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/app_blue"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/relative_for_pass"
        app:layout_constraintEnd_toEndOf="parent"

        />



    <RelativeLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_rect"
        android:backgroundTint="#3A82F7"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/tv_or"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:padding="8dp"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login_with_google"
        />

    <RelativeLayout
        android:id="@+id/btn_login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rounded_rect"
        android:backgroundTint="#F7F8F8"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/login_or_register"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:src="@drawable/icon_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_vertical"
                android:text="@string/login_with_google"
                android:textSize="18sp"
                android:textColor="@color/app_blue" />
        </LinearLayout>
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/login_or_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tv_new_to_logistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_logistic"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/app_blue"
            android:textSize="14sp"
            android:layout_toEndOf="@id/tv_new_to_logistic"
            android:layout_marginStart="8dp"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>